--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -27,4 +27,10 @@
   work = {{ $work }}
   ephemeral = {{ $ephemeral }}
   personal = {{ $personal }}
+  zshPlugins = [
+      "vi-mode",
+      "zsh-syntax-highlighting",
+  ]
 
+[github]
+    refreshPeriod = "12h"
