--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -52,6 +52,10 @@ alias cat=batcat
 alias fd=fdfind
 {{- end }}
 
+{{- if lookPath "zoxide" }}
+alias z=zoxide
+{{- end }}
+
 {{ if stat (printf "%s/.local/bin/nvim" .chezmoi.homeDir) -}}
 export EDITOR=$HOME/.local/bin/nvim
 {{ else if lookPath "nvim" -}}
