--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -43,19 +43,13 @@ source $ZSH/oh-my-zsh.sh
 alias g=git
 
 {{- if lookPath "bat" }}
-alias cat=bat
-{{- else if lookPath "batcat" }}
-alias cat=batcat
+alias b=bat
 {{- end }}
 
 {{- if lookPath "fdfind" }}
 alias fd=fdfind
 {{- end }}
 
-{{- if lookPath "zoxide" }}
-alias z=zoxide
-{{- end }}
-
 {{ if stat (printf "%s/.local/bin/nvim" .chezmoi.homeDir) -}}
 export EDITOR=$HOME/.local/bin/nvim
 {{ else if lookPath "nvim" -}}
@@ -71,7 +65,11 @@ export EDITOR=nvim
 {{ else -}}
 export EDITOR=vim
 {{ end -}}
+
+export RIPGREP_CONFIG_PATH=~/.config/ripgrep/config
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
+# zoxide
+eval "$(zoxide init zsh)"
