--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -15,7 +15,7 @@ fi
 {{- $paths := list }}
 {{- $homeDir := .chezmoi.homeDir }}
 {{- range $_, $relPath := list "bin" "go/bin" ".cargo/bin" ".local/bin" }}
-{{    $path := joinPath $homeDir $relPath }}
+{{-   $path := joinPath $homeDir $relPath }}
 {{-   if stat $path }}
 {{-     $paths = mustAppend $paths $path }}
 {{-   end }}
@@ -71,14 +71,6 @@ export EDITOR=nvim
 export EDITOR=vim
 {{ end -}}
 
-{{ if stat (printf "%s/.local/bin/nvim" .chezmoi.homeDir) -}}
-export EDITOR=$HOME/.local/bin/nvim
-{{ else if lookPath "nvim" -}}
-export EDITOR=nvim
-{{ else -}}
-export EDITOR=vim
-{{ end -}}
-
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/config
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
@@ -88,3 +80,14 @@ export RIPGREP_CONFIG_PATH=~/.config/ripgrep/config
 # zoxide
 eval "$(zoxide init zsh)"
 {{ end -}}
+
+{{ if lookPath "nvm" -}}
+export NVM_DIR="$HOME/.config/nvm"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+[ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
+{{ end -}}
+
+{{ if lookPath "tea" }}
+source <(tea completion zsh)
+{{ end }}
+
