--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -71,7 +71,9 @@ export EDITOR=nvim
 export EDITOR=vim
 {{ end -}}
 
+{{ if lookPath "rg" }}
 export RIPGREP_CONFIG_PATH=~/.config/ripgrep/config
+{{ end }}
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
@@ -91,3 +93,4 @@ export NVM_DIR="$HOME/.config/nvm"
 source <(tea completion zsh)
 {{ end }}
 
+{{- /* vim: set filetype=zsh: */}}
