--- a/home/dot_zshrc.tmpl
+++ b/home/dot_zshrc.tmpl
@@ -83,11 +83,9 @@ export RIPGREP_CONFIG_PATH=~/.config/ripgrep/config
 eval "$(zoxide init zsh)"
 {{ end -}}
 
-{{ if lookPath "nvm" -}}
-export NVM_DIR="$HOME/.config/nvm"
-[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # This loads nvm
+export NVM_DIR="$([ -z "${XDG_CONFIG_HOME-}" ] && printf %s "${HOME}/.nvm" || printf %s "${XDG_CONFIG_HOME}/nvm")"
+[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh" # This loads nvm
 [ -s "$NVM_DIR/bash_completion" ] && \. "$NVM_DIR/bash_completion"  # This loads nvm bash_completion
-{{ end -}}
 
 {{ if lookPath "tea" }}
 source <(tea completion zsh)
